fixed z-index problem

--- a/src/components/GameDetailComponents/Slider/PhotoSlider.module.scss
+++ b/src/components/GameDetailComponents/Slider/PhotoSlider.module.scss
@@ -168,7 +168,7 @@
   background-color: rgba(255, 255, 255, 0.8);
   cursor: pointer;
   transition: color 0.3s;
-  z-index: 100;
+  z-index: 90;
 }
 .button__prev:hover,
 .button__next:hover {
